<?xml version="1.0"?>
<package format="2">
  <name>rowma_ros</name>
  <version>0.0.3</version>
  <description>The rowma_ros package</description>

  <maintainer email="suenagaryoutaabc@gmail.com">asmsuechan</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/rowma/rowma</url>

  <author email="suenagaryoutaabc@gmail.com">asmsuechan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>python-socketio</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
